--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,5 @@
 AllCops:
-  TargetRubyVersion: 2.5
+  TargetRubyVersion: 2.7
 
 Style/Documentation:
   Enabled: false
@@ -15,3 +15,12 @@ Layout/LineLength:
 
 Metrics/MethodLength:
   Max: 30
+
+Metrics/CyclomaticComplexity:
+  Enabled: false
+
+Metrics/PerceivedComplexity:
+  Enabled: false
+
+Style/ClassVars:
+  Enabled: false
